--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
-        cache: pnpm
+    - run: corepack enable
+    - run: corepack install
     - run: pnpm install --frozen-lockfile
     - run: pnpm run typecheck
