--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     },
     "scripts": {
         "build": "tsc",
-        "typecheck": "tsc --noEmit"
+        "typecheck": "tsc --noEmit",
+        "verify": "pnpm run typecheck"
     },
     "devDependencies": {
         "prettier": "^3.5.3",
