--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Release
 
 on:
-  release:
-    types: [published]
+  push:
+    tags: ["*"]
 
 jobs:
   release:
@@ -18,6 +18,7 @@ jobs:
     - run: pnpm install --frozen-lockfile
     - run: pnpm run verify
     - run: pnpm run build
-    - run: pnpm publish --access public
+    - run: pnpm pkg set version=$GITHUB_REF_NAME
+    - run: pnpm publish --access public --no-git-checks
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
