--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     },
     "scripts": {
         "build": "tsc",
+        "test": "vitest run",
         "typecheck": "tsc --noEmit",
-        "verify": "pnpm run typecheck"
+        "verify": "pnpm run test && pnpm run typecheck"
     },
     "devDependencies": {
+        "jsdom": "^26.1.0",
         "prettier": "^3.5.3",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "vitest": "^3.1.3"
     },
     "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
