Document subscribe API

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,6 @@
 
         // Emit
         "declaration": true,
-        "outDir": "dist",
-        "removeComments": true
+        "outDir": "dist"
     }
 }
